--- a/appointments.html
+++ b/appointments.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-secondary-subtle" style="padding: 20px;">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary rounded shadow">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary rounded shadow navbar-expand">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Welcome To The Wagin' Wash</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
