--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body style="padding: 20px" class="bg-secondary-subtle">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary rounded shadow">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary rounded shadow navbar-expand">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Welcome To The Wagin' Wash</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,8 +57,8 @@
   </tbody>
 </table><br>
 <div class="row" style="justify-content:center">
-  <div class="col-md-6  img-polaroid" ><img  src="Images/grooming-area2.jpg" alt="Dog grooming">
-    <div class="img-container">
+  <div class="col-md-6 " ><img  src="Images/grooming-area2.jpg" alt="Dog grooming">
+    <div class="text-center">
       <p>Our Trusted staff</p>
     </div>
   </div>
