--- a/appointments.html
+++ b/appointments.html
@@ -25,10 +25,10 @@
         </div>
       </nav><br>
     <div class="row ">
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <img src="Images/alan-king-KZv7w34tluA-unsplash.jpg" style="width:500px" alt="Dog with sunglasses">
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <img src="Images/anthony-duran-xypTOFe_hqc-unsplash.jpg" style="height:750px" alt="Dog getting a wash">
         </div>
     </div><br>
