--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 <div class="row" style="justify-content:center">
   <div class="col-md-6 " ><img  src="Images/grooming-area2.jpg" alt="Dog grooming">
     <div class="text-center">
-      <p>Our Trusted staff</p>
+      <p>Our trusted staff</p>
     </div>
   </div>
   
