--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div><br>
         <div class="border rounded bg-white shadow">
          <h3>About Us</h3> <br>
-         <p>All Dogs need basic hygiene and routine care. Deepending on A dogs needs they dont always need a blow-dry. We Understand each dogs differnet needs with Services and the importance if unique expernces for out customers</p>
+         <p>All dogs need basic hygiene and routine care. Depending on a dogs needs they dont always need a blow-dry. We understand each dogs differnet needs with services and the importance if unique experences for our customers.</p>
         </div><br><br>
 
         <div class="row bg-light object-fit-contain border rounded shadow">
@@ -50,11 +50,11 @@
             </div>
             <div class="col-md-4">
               <img src="Images/Dog hair styles.jpg" class="img-fluid rounded" alt="A dog getting a hair cut">
-              <h6>Hair cut:<br><br> Hair cuts Depend on dog size and coat length</h6>
+              <h6>Hair cut:<br><br> Hair cuts depends on dog size and coat length</h6>
             </div>
             <div class="col-md-4">
               <img src="Images/importance-of-trimming-dog-nails-1685007776626_1200x.webp" class="img-fluid rounded" alt="A dog getting a nail Trimming">
-              <h6>Nail Trimming:<br><br> Nail Trimming Cost depends on condition of dog and size</h6>
+              <h6>Nail Trimming:<br><br> Nail trimming cost depends on condition of dog and size</h6>
             </div>
             <div class="col-md-4">
               <img src="images/Dog blow dry.jpg" class="img-fluid rounded" alt="Small Dog getting a blow dry">
@@ -62,11 +62,11 @@
             </div>
             <div class="col-md-4">
               <img src="images/Dog Teeth Brushing.jpg" class="img-fluid rounded" alt="Small Dog getting a teeth brushing">
-              <h6>Tooth Brushing:<br> <br>Add a Tooth brushing to any service. Cost depends on dog temperment</h6>
+              <h6>Tooth Brushing:<br> <br>Add a tooth brushing to any service. Cost depends on dog temperment</h6>
             </div>
               <div class="col-md-4">
                 <img src="images/Dog ear cleaning.jpg" class="img-fluid rounded" alt="Small Dog getting a ear cleaning">
-                <h6>Ear Cleaning:<br> <br>Add a Ear cleaning to any service</h6>
+                <h6>Ear Cleaning:<br> <br>Add an ear cleaning to any service</h6>
               </div>
               
       </div>
