--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
 <header>
   <H2>Contacts</H2>
 </header>
+<!--This is where I used the bootstrap table set for the employ contact information-->
 <table class="table shadow">
   <thead>
     <tr>
@@ -62,11 +63,9 @@
       <p>Our trusted staff</p>
     </div>
   </div>
-  
- 
-  
-  
 </div><br>
+<!--This is where I decided to add a stay connected input for the customer to stay connected to the community-->
+<!--I used the email type input so it will require a email adress to be added-->
 <div class="container">
   <div class="row text-center">
     <form class="col-md-6">
@@ -96,6 +95,7 @@
     </div>
   </div>
 </div>
+<!--I felt it's important to add the copy right to the company at the footer-->
 <footer>
   <hr style="border: 3px solid white">
   <p class="text-center">© 2025 Wagn' wash. All Rights Reserved</p>
