--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="styles.css">
-
+<!--The navigation bar-->
 </head>
 <body class="bg-secondary-subtle " style="padding: 20px">
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded shadow navbar-expand" >
@@ -24,6 +24,7 @@
           </div>
         </div>
       </nav><br>
+      <!--this is the start of the boot strap grid holding all of the content-->
       <div class="container-fluid text-center  ">
         <div class="row">
           <div class="col-md-6 ">
@@ -34,11 +35,12 @@
             <img  src="Images/How-Long-Does-it-Take-to-Become-a-Dog-Groomer.png" class="rounded float-center img-fluid " alt="A professional Groomer at Work">
           </div>
         </div><br>
+        <!--I used shadows for the text boxes to help add depth-->
         <div class="border rounded bg-white shadow">
          <h3>About Us</h3> <br>
          <p>All dogs need basic hygiene and routine care. Depending on a dogs needs they dont always need a blow-dry. We understand each dogs differnet needs with services and the importance if unique experences for our customers.</p>
         </div><br><br>
-
+<!--I used the grid system to help organize the services and stack them on smaller displays-->
         <div class="row bg-light object-fit-contain border rounded shadow">
           <div class="col col-lg-12">
             <h4>Services We Provide</h4>
@@ -56,6 +58,7 @@
               <img src="Images/importance-of-trimming-dog-nails-1685007776626_1200x.webp" class="img-fluid rounded" alt="A dog getting a nail Trimming">
               <h6>Nail Trimming:<br><br> Nail trimming cost depends on condition of dog and size</h6>
             </div>
+            <!--I used the rounded class to make images look more appealing-->
             <div class="col-md-4">
               <img src="images/Dog blow dry.jpg" class="img-fluid rounded" alt="Small Dog getting a blow dry">
               <h6>Blow Dry:<br> <br>Add a blow-dry and brush-out to Basic wash. Cost is based on dog's size and length of coat </h6>
@@ -71,8 +74,6 @@
               
       </div>
     </div><br>
-      
-
   
 </div>
 <div class="container">
@@ -89,6 +90,7 @@
         </div>
         <div id="emailHelp" >We'll never share your email with anyone else.</div>
     </form>
+    <!--I used a unordered list for the company hours-->
   </div>
     <div class="col-md-6" >
       <ul style="list-style-type: none">
